--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==7.1.2
 colorama==0.4.4
 cursor==1.3.4
 Django==3.1.6
+flake8==3.8.4
 flatbuffers==1.12
 future==0.18.2
 gast==0.3.3
@@ -23,10 +24,12 @@ idna==2.10
 image==1.5.33
 ipaddress==1.0.23
 Jinja2==2.11.3
+Keras==2.4.3
 Keras-Preprocessing==1.1.2
 log-symbols==0.0.14
 Markdown==3.3.3
 MarkupSafe==1.1.1
+mccabe==0.6.1
 numpy==1.19.5
 oauthlib==3.1.0
 opt-einsum==3.3.0
@@ -36,7 +39,9 @@ protobuf==3.14.0
 pyaml==20.4.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycodestyle==2.6.0
 pycryptodomex==3.9.9
+pyflakes==2.2.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
@@ -45,6 +50,7 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 requirements-parser==0.2.0
 rsa==4.7
+scipy==1.6.0
 sentry-sdk==0.19.5
 six==1.15.0
 smmap==3.0.5
@@ -53,6 +59,10 @@ spinners==0.0.24
 sqlparse==0.4.1
 starlette==0.14.2
 tabulate==0.8.7
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
 termcolor==1.1.0
 typing-extensions==3.7.4.3
 urllib3==1.26.3
